@@ -10,6 +10,7 @@
     * 4207 FIX: mk_jolokia: Use configured port as default instance name...
             NOTE: Please refer to the migration notes!
     * 4208 FIX: mk_jolokia: Plugin now works with jolokia versions requiring the base url to finish with a slash...
+    * 4174 FIX: added missing perfometer for interface services
 
     Multisite:
     * 4169 View action: Default values of sticky, notification and persistent options can now be configured via global settings....
